# adoption-and-enablement-examples

./: .gitignore  CODEOWNERS  README.md
Adding Certificate Store/: kfutil_get_cap.ps1
Keyfactor ACME Management Tool/kfacme/: README.md  go.mod  go.sum  main.go  pyproject.toml
Keyfactor ACME Management Tool/kfacme/internal/acme_client/: acme_client.go
Keyfactor ACME Management Tool/kfacme/internal/commands/: access.go  account_admin_menu.go  admin_menu.go  enrollment_user_menu.go  root.go  status.go  sub_menu.go
Keyfactor ACME Management Tool/kfacme/internal/commands/accounts/: accounts_menu.go  change_template.go  show_accounts.go
Keyfactor ACME Management Tool/kfacme/internal/commands/claims/: add_claims.go  claims_menu.go  remove_claims.go  show_claims.go  update_claims.go
Keyfactor ACME Management Tool/kfacme/internal/commands/eab_keys/: eab_delete.go  eab_get.go
Keyfactor ACME Management Tool/kfacme/internal/commands/helpers/: choose_account.go  choose_claim.go  choose_role.go  choose_template.go  identifiers_validation.go  show_help.go
Keyfactor ACME Management Tool/kfacme/internal/commands/identifiers/: add_Identifiers.go  identifiers_menu.go  remove_Identifiers.go  show_Identifiers.go
Keyfactor ACME Management Tool/kfacme/internal/config/: config.go
Keyfactor ACME Management Tool/kfacme/internal/models/: models.go
Keyfactor ACME Management Tool/kfacme/src/kfacme/: __init__.py  acme_client.py  app.py  cli.py  config.py
Keyfactor ACME Management Tool/kfacme/src/kfacme.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+153 files in other folders)
