[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kfacme"
version = "1.0.0"
description = "KFACME scaffolding + CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Jeremy Howland"}]
dependencies = [
  "requests>=2.32.5,<3",
  "click>=8.1.0,<9",
  "prettytable>=3.17.0,<4",
  "PyJWT>=2.11.0,<3",
]
[project.scripts]
kfacme = "kfacme.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
kfacme = ["templates/*.tpl"]